@@ -665,6 +665,10 @@ There are several optional attributes of the binary element:
 
  args       Specify optional arguments to be added on the command line when running the binary.
 
+ inline     When set to 'yes' the text content of the element is used as script
+	    content instead of a path. The value of 'binarypath' is used as
+	    script name in this case
+
 The FILES element:
 
 The files element contains a list of files and directories, one per line,
